--- a/xinqch-project/pom.xml
+++ b/xinqch-project/pom.xml
@@ -17,6 +17,8 @@
 		<spring.version>4.2.0.RELEASE</spring.version>
 		<!-- spring security 版本号 -->
 		<springsecurity.version>4.0.2.RELEASE</springsecurity.version>
+		<!-- shiro 版本号  -->
+		<shiro.version>1.2.4</shiro.version>
 		<!-- mybatis版本号 -->
 		<mybatis.version>3.2.8</mybatis.version>
 		<!-- mysql版本号 -->
@@ -181,6 +183,27 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- Spring 整合Shiro需要的依赖 -->
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	    <version>${shiro.version}</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-web</artifactId>
+	    <version>${shiro.version}</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-ehcache</artifactId>
+	    <version>${shiro.version}</version>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-spring</artifactId>
+	    <version>${shiro.version}</version>
+	  </dependency>
 
 		<!-- mybatis核心包 -->
 		<dependency>
