--- a/xinqch-project/xinqch-author/pom.xml
+++ b/xinqch-project/xinqch-author/pom.xml
@@ -63,93 +63,23 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-expression</artifactId>
 	</dependency>
-	<!-- spring security -->
-	<dependency>
-           <groupId>org.springframework.security</groupId>
-           <artifactId>spring-security-acl</artifactId>
-         
-           <exclusions>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-core</artifactId>
-               </exclusion>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-aop</artifactId>
-               </exclusion>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-asm</artifactId>
-               </exclusion>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-context</artifactId>
-               </exclusion>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-jdbc</artifactId>
-               </exclusion>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-tx</artifactId>
-               </exclusion>
-           </exclusions>
-       </dependency>
-      
-       <dependency>
-           <groupId>org.springframework.security</groupId>
-           <artifactId>spring-security-aspects</artifactId>
-       </dependency>
-   
-       <dependency>
-           <groupId>org.springframework.security</groupId>
-           <artifactId>spring-security-core</artifactId>
-           <exclusions>
-               <exclusion>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-expression</artifactId>
-               </exclusion>
-           </exclusions>
-       </dependency>
-   
-       <dependency>
-           <groupId>org.springframework.security</groupId>
-           <artifactId>spring-security-config</artifactId>
-       </dependency>
-       
-   <dependency>
-     <groupId>org.springframework.security</groupId>
-   	<artifactId>spring-security-taglibs</artifactId>
-     <exclusions>
-       <exclusion>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-web</artifactId>
-       </exclusion>
-       <exclusion>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-expression</artifactId>
-       </exclusion>
-     </exclusions>
-   </dependency>
-   
-    <dependency>
-     <groupId>org.springframework.security</groupId>
-   	<artifactId>spring-security-web</artifactId>
-     <exclusions>
-       <exclusion>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-jdbc</artifactId>
-       </exclusion>
-       <exclusion>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-web</artifactId>
-       </exclusion>
-       <exclusion>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-expression</artifactId>
-       </exclusion>
-     </exclusions>
-   </dependency>
+	  <!-- Spring 整合Shiro需要的依赖 -->
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-web</artifactId>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-ehcache</artifactId>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-spring</artifactId>
+	  </dependency>
 
 	<!-- mybatis核心包 -->
 	<dependency>
