--- a/xinqch-project/xinqch-author/src/main/webapp/WEB-INF/web.xml
+++ b/xinqch-project/xinqch-author/src/main/webapp/WEB-INF/web.xml
@@ -94,7 +94,17 @@
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<url-pattern>/</url-pattern>
 	</filter-mapping>
-	
+	<!-- 配置shiro的核心拦截器 -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<session-config>
 		<session-timeout>40</session-timeout>
 	</session-config>
