--- a/xinqch-project/xinqch-author/pom.xml
+++ b/xinqch-project/xinqch-author/pom.xml
@@ -120,14 +120,20 @@
 	</dependency>
 
 	<!-- 映入JSON  -->
-	<dependency>
+	<!-- <dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-mapper-asl</artifactId>
 	</dependency>
 	<dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-jaxrs</artifactId>
+	</dependency> -->
+	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>fastjson</artifactId>
+		<version>1.2.7</version>
 	</dependency>
+		
 
 	<!-- 上传组件包  -->
 	<dependency>
