添加shiro url拦截机制的增删改查

--- a/xinqch-project/xinqch-author/src/main/resources/config/db.properties
+++ b/xinqch-project/xinqch-author/src/main/resources/config/db.properties
@@ -1,16 +1,20 @@
 #mybatis generator
+# 是否去除自动生成的注释 true：是 ： false:否 
 suppressAllComments=true
 suppressDate=true
 forceBigDecimals=false
-modelTargetPackage=cs.erp.soa.domian.mysql
+#类型实体
+modelTargetPackage=com.xinqch.shiro.pojo
 modelTargetProject=./src/main/java
 trimStrings=true
-mapTargetPackage=com.xinqch.mapping
+#对应的mapper.xml文件
+mapTargetPackage=com.xinqch.shiro
 mapTargetProject=./src/main/resources
-clientTargetPackage=cs.erp.soa.dao.logistics
+#mapper 接口
+clientTargetPackage=com.xinqch.shiro.mapper
 clientTargetProject=./src/main/java
-tableName=channel_delivery_center
-domainObjectName=ChannelDeliveryCenter
+tableName=url_filter
+domainObjectName=UrlFilter
 
 #H2 Server Params
 tcpPort=8043
@@ -30,10 +34,9 @@ dbcp.validationQuery=SELECT NOW() FROM DUAL
 
 #MySql
 mysql.driver=com.mysql.jdbc.Driver
-#mysql.url=jdbc:mysql://127.0.0.1:3306/xinqch?useUnicode=true&characterEncoding=UTF-8
-mysql.url=jdbc:mysql://192.168.1.104:3306/a01123
+mysql.url=jdbc:mysql://127.0.0.1:3306/xinqch?useUnicode=true&characterEncoding=UTF-8
 mysql.username=root
-mysql.password=123456
+mysql.password=xinqch
 
 #H2
 h2.driver=org.h2.Driver
