mybatis 配置出现问题

--- a/xinqch-project/xinqch-author/src/test/java/testConfig/db.properties
+++ b/xinqch-project/xinqch-author/src/test/java/testConfig/db.properties
@@ -30,11 +30,11 @@ dbcp.validationQuery=SELECT NOW() FROM DUAL
 
 #MySql
 mysql.driver=com.mysql.jdbc.Driver
-#mysql.url=jdbc:mysql://127.0.0.1:3306/xinqch?useUnicode=true&characterEncoding=UTF-8
-mysql.url=jdbc:mysql://192.168.1.104:3306/a01123?useUnicode=true&characterEncoding=UTF-8
+mysql.url=jdbc:mysql://127.0.0.1:3306/xinqch?useUnicode=true&characterEncoding=UTF-8
+#mysql.url=jdbc:mysql://192.168.1.104:3306/a01123?useUnicode=true&characterEncoding=UTF-8
 mysql.username=root
-#mysql.password=xinqch
-mysql.password=123456
+mysql.password=xinqch
+#mysql.password=123456
 
 #H2
 h2.driver=org.h2.Driver
