--- a/xinqch-project/xinqch-blogger/src/test/java/testConfig/db.properties
+++ b/xinqch-project/xinqch-blogger/src/test/java/testConfig/db.properties
@@ -1,20 +1,16 @@
 #mybatis generator
-# 是否去除自动生成的注释 true：是 ： false:否 
 suppressAllComments=true
 suppressDate=true
 forceBigDecimals=false
-#类型实体
-modelTargetPackage=com.xinqch.shiro.model
+modelTargetPackage=com.xinqch.model
 modelTargetProject=./src/main/java
 trimStrings=true
-#对应的mapper.xml文件
-mapTargetPackage=com.xinqch.shiro.mapping
+mapTargetPackage=com.xinqch.mapping
 mapTargetProject=./src/main/resources
-#mapper 接口
-clientTargetPackage=com.xinqch.shiro.mapper
+clientTargetPackage=com.xinqch.mapper
 clientTargetProject=./src/main/java
-tableName=url_filter
-domainObjectName=UrlFilter
+tableName=user
+domainObjectName=User
 
 #H2 Server Params
 tcpPort=8043
@@ -35,8 +31,10 @@ dbcp.validationQuery=SELECT NOW() FROM DUAL
 #MySql
 mysql.driver=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://127.0.0.1:3306/xinqch?useUnicode=true&characterEncoding=UTF-8
+#mysql.url=jdbc:mysql://192.168.1.104:3306/a01123?useUnicode=true&characterEncoding=UTF-8
 mysql.username=root
 mysql.password=xinqch
+#mysql.password=123456
 
 #H2
 h2.driver=org.h2.Driver
