--- a/xinqch-project/xinqch-blogger/pom.xml
+++ b/xinqch-project/xinqch-blogger/pom.xml
@@ -222,5 +222,25 @@
   </dependencies>
   <build>
     <finalName>xinqch-blogger</finalName>
-  </build>
+	<plugins>
+		<plugin>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-maven-plugin</artifactId>
+			<version>1.3.2</version>
+			<configuration>
+				<!--允许移动生成的文件 -->
+				<verbose>true</verbose>
+				<!--允许覆盖生成的文件 -->
+				<overwrite>true</overwrite>
+			</configuration>
+			<dependencies>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>${mysql.version}</version>
+				</dependency>
+			</dependencies>
+		</plugin>
+	</plugins>
+	</build>
 </project>
