添加自定义sql工具类

--- a/xinqch-project/xinqch-author/src/main/resources/config/db.properties
+++ b/xinqch-project/xinqch-author/src/main/resources/config/db.properties
@@ -4,17 +4,17 @@ suppressAllComments=true
 suppressDate=true
 forceBigDecimals=false
 #类型实体
-modelTargetPackage=com.xinqch.shiro.model
+modelTargetPackage=com.xinqch.model
 modelTargetProject=./src/main/java
 trimStrings=true
 #对应的mapper.xml文件
-mapTargetPackage=com.xinqch.shiro.mapping
+mapTargetPackage=com.xinqch.mapping
 mapTargetProject=./src/main/resources
 #mapper 接口
-clientTargetPackage=com.xinqch.shiro.mapper
+clientTargetPackage=com.xinqch.mapper
 clientTargetProject=./src/main/java
-tableName=url_filter
-domainObjectName=UrlFilter
+tableName=tab_plugin
+domainObjectName=TabPlugin
 
 #H2 Server Params
 tcpPort=8043
