进一步实现权限

--- a/xinqch-project/xinqch-author/src/main/resources/config/db.properties
+++ b/xinqch-project/xinqch-author/src/main/resources/config/db.properties
@@ -44,4 +44,7 @@ h2.url=jdbc:h2:tcp://localhost:9081/cpub;DB_CLOSE_DELAY=-1;WRITE_DELAY=0
 h2.username=sa
 h2.password=
 
-
+#Shiro 
+loginUrl=/
+successUrl=/into/loginHome
+unauthorizedUrl=
