增加过滤文件机制

--- a/xinqch-project/pom.xml
+++ b/xinqch-project/pom.xml
@@ -10,6 +10,7 @@
     <module>xinqch-author</module>
     <module>xinqch-blogger</module>
     <module>xinqch-util</module>
+    <module>xinqch-task</module>
   </modules>
   <!-- 依赖版本号声明  -->
   <properties>
