--- a/xinqch-project/xinqch-util/pom.xml
+++ b/xinqch-project/xinqch-util/pom.xml
@@ -36,6 +36,15 @@
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+	</dependency>
+	<!-- 处理操作word、ppt、viso、outlook -->
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-scratchpad</artifactId>
+	</dependency>
 	
   </dependencies>
 </project>
