--- a/xinqch-project/pom.xml
+++ b/xinqch-project/pom.xml
@@ -327,6 +327,11 @@
 				<artifactId>javamelody-core</artifactId>
 				<version>1.58.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
