--- a/xinqch-project/xinqch-ssh/src/main/resources/config/db.properties
+++ b/xinqch-project/xinqch-ssh/src/main/resources/config/db.properties
@@ -11,7 +11,7 @@ h2.username=sa
 h2.password=
 
 #hibernate config
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql = true
 hibernate.format_sql = false
 hibernate.hbm2ddl.auto = update
