--- a/xinqch-project/xinqch-ssh/src/main/webapp/WEB-INF/web.xml
+++ b/xinqch-project/xinqch-ssh/src/main/webapp/WEB-INF/web.xml
@@ -10,17 +10,49 @@
 		</listener-class>
 	</listener>
 
-	<!-- <servlet>
+	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
-		<servlet-class>com.alibaba.druid.support.http.StatViewServlet
-		</servlet-class>  
+		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+			<!-- <load-on-startup>1</load-on-startup> -->
+			<!-- <init-param>  
+		        允许清空统计数据  
+		        <param-name>resetEnable</param-name>  
+		        <param-value>true</param-value>  
+		    </init-param>  
+		    <init-param>  
+		        用户名  
+		        <param-name>loginUsername</param-name>  
+		        <param-value>admin</param-value>  
+		    </init-param>  
+		    <init-param>  
+		        密码  
+		        <param-name>loginPassword</param-name>  
+		        <param-value>xinqch</param-value>  
+		    </init-param>   -->  
 	</servlet>  
 	<servlet-mapping>  
 	    <servlet-name>DruidStatView</servlet-name>  
 	    <url-pattern>/druid/*</url-pattern>  
-	</servlet-mapping>   -->
+	</servlet-mapping>
+	
+	<!-- Struts2的核心过滤器配置 -->
+    <filter>
+        <filter-name>struts2</filter-name>
+        <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+        <init-param>
+			<param-name>config</param-name>
+			<param-value>
+				struts-default.xml,struts-plugin.xml,config/struts.xml
+			</param-value>
+		</init-param>
+    </filter>
+    <!-- Struts2过滤器拦截所有的.action请求 -->
+    <filter-mapping>
+        <filter-name>struts2</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<!-- druid 拦截器  -->
-	<!-- <filter>
+	<filter>
 		<filter-name>DruidWebStatFilter</filter-name>
 		<filter-class>com.alibaba.druid.support.http.WebStatFilter
 		</filter-class>
@@ -33,7 +65,7 @@
 	<filter-mapping>
 		<filter-name>DruidWebStatFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
 	<!--UTF8 编码过滤 -->
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
@@ -52,6 +84,15 @@
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<url-pattern>/</url-pattern>
+	</filter-mapping>
+	<!--Hibernate的session丢失解决方法 -->      
+	<filter>         
+		<filter-name>openSessionInView</filter-name> 
+		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>      
+	</filter>      
+	<filter-mapping>         
+		<filter-name>openSessionInView</filter-name>          
+		<url-pattern>/*</url-pattern>      
 	</filter-mapping>
 	
 </web-app>
