添加打赏二维码，获取微信accessToken

--- a/xinqch-project/xinqch-wechat/src/main/webapp/WEB-INF/web.xml
+++ b/xinqch-project/xinqch-wechat/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,18 @@
     <!-- 详细描述见http://blog.csdn.net/jadyer/article/details/11991457 -->  
     <listener>  
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>  
-    </listener>  
-
+    </listener> 
+    <!-- log4j begin -->
+    <context-param>  
+	    <!--log4j配置地址 -->  
+	    <param-name>log4jConfigLocation</param-name>  
+	    <param-value>classpath:config/log4j.properties</param-value>  
+	</context-param>  
+	<!-- spring里的log4j配置监听器 -->  
+	<listener>  
+	    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
+	</listener>  
+	<!-- log4j end  -->
 	<!-- spring mvc容器和servlet的定义 -->
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
@@ -31,7 +41,6 @@
 		<servlet-name>springMVC</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
 
 	<!-- springMvc + hessian -->
 	<servlet>
@@ -50,7 +59,6 @@
 	</servlet-mapping>
 
 	<!-- servlet 专区 开始 -->
-	
 	<!-- servlet 专区 结束 -->
 
 	<!-- 使用H2控制台的Servlet H2控制台是一个独立的应用程序，包括它自己的Web服务器，但它可以作为一个servlet作为 -->
