--- a/xinqch-project/pom.xml
+++ b/xinqch-project/pom.xml
@@ -32,6 +32,9 @@
 		<poi.version>3.13</poi.version>
 		<!-- hibernate 版本号 -->
 		<hibernate.version>5.1.0.Final</hibernate.version>
+		<!-- log4j 版本号  -->
+		<log4j.version>2.5</log4j.version>
+		<slf4j.version>1.7.16</slf4j.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -196,7 +199,32 @@
 				<artifactId>jstl</artifactId>
 				<version>1.2</version>
 			</dependency>
-
+			<!-- log4j  -->
+			<dependency>
+	            <groupId>org.apache.logging.log4j</groupId>
+	            <artifactId>log4j-api</artifactId>
+	            <version>${log4j.version}</version>
+	        </dependency>
+         	<dependency>
+            	<groupId>org.apache.logging.log4j</groupId>
+             	<artifactId>log4j-core</artifactId>
+             	<version>${log4j.version}</version>
+        	</dependency>
+        	<dependency>    
+        		<groupId>org.apache.logging.log4j</groupId>
+            	<artifactId>log4j-web</artifactId>
+            	<version>${log4j.version}</version>
+        	</dependency>
+        	<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
 			<!-- web Service begin -->
 			<!-- hessian -->
 			<dependency>
