--- a/xinqch-project/xinqch-wechat/pom.xml
+++ b/xinqch-project/xinqch-wechat/pom.xml
@@ -133,7 +133,27 @@
 		<artifactId>commons-codec</artifactId>
 	</dependency>
 	<!-- web Service end -->
-
+	<!-- log4j  -->
+	<dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+   	</dependency>
+	<dependency>    
+		<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-web</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+	</dependency>
 	<!-- 生成二维码，条形码 -->
 	<dependency>
 		<groupId>com.google.zxing</groupId>
