--- a/xinqch-project/pom.xml
+++ b/xinqch-project/pom.xml
@@ -264,7 +264,12 @@
 				<artifactId>fastjson</artifactId>
 				<version>1.2.7</version>
 			</dependency>
-
+			<!-- dom4j -->
+			<dependency>
+				<groupId>dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>1.6.1</version>
+			</dependency>
 			<!-- 上传组件包  -->
 			<dependency>
 				<groupId>commons-fileupload</groupId>
