--- a/xinqch-project/xinqch-wechat/pom.xml
+++ b/xinqch-project/xinqch-wechat/pom.xml
@@ -118,7 +118,10 @@
 		<groupId>com.alibaba</groupId>
 		<artifactId>fastjson</artifactId>
 	</dependency>
-
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+	</dependency>
 	<!-- 上传组件包  -->
 	<dependency>
 		<groupId>commons-fileupload</groupId>
