--- a/xinqch-project/xinqch-author/src/main/resources/config/db.properties
+++ b/xinqch-project/xinqch-author/src/main/resources/config/db.properties
@@ -13,8 +13,8 @@ mapTargetProject=./src/main/resources
 #mapper 接口
 clientTargetPackage=com.xinqch.mapper
 clientTargetProject=./src/main/java
-tableName=tab_plugin
-domainObjectName=TabPlugin
+tableName=mail
+domainObjectName=Mail
 
 #H2 Server Params
 tcpPort=8043
