--- a/xinqch-project/xinqch-util/pom.xml
+++ b/xinqch-project/xinqch-util/pom.xml
@@ -63,5 +63,10 @@
 		<groupId>org.apache.httpcomponents</groupId>
 		<artifactId>httpclient</artifactId>
 	</dependency>
+	<!-- mail  -->
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+	</dependency>
   </dependencies>
 </project>
