--- a/xinqch-project/xinqch-wechat/pom.xml
+++ b/xinqch-project/xinqch-wechat/pom.xml
@@ -122,6 +122,10 @@
 		<groupId>dom4j</groupId>
 		<artifactId>dom4j</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>com.thoughtworks.xstream</groupId>
+		<artifactId>xstream</artifactId>
+	</dependency>	
 	<!-- 上传组件包  -->
 	<dependency>
 		<groupId>commons-fileupload</groupId>
